--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require-dev": {
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "itsgoingd/clockwork": "^5.0",
         "laravel/homestead": "^11.3",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
